--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -303,11 +303,15 @@
                         <h2>Thông tin sản phẩm</h2>
                         <ul class="list">
                             <li><a href="#"><h4>Sản phẩm <span>Tổng</span></h4></a></li>
-                            @foreach (var item in ViewBag.Product)
+                            @if (ViewBag.Product!=null)
                             {
-                                var tt = item.Quantity * item.Price;
+                                @foreach (var item in ViewBag.Product)
+                                {
+                                    var tt = item.Quantity * item.Price;
 
-                                <li><a href="#">@item.Name<span class="middle">x @item.Quantity</span> <span class="last" style="color:#f15e2c">@tt.ToString("C0", new CultureInfo("vi-VN"))</span></a></li>
+                                    <li><a href="#">@item.Name<span class="middle">x @item.Quantity</span> <span class="last" style="color:#f15e2c">@tt.ToString("C0", new CultureInfo("vi-VN"))</span></a></li>
+
+                                }
 
                             }
                         </ul>
@@ -315,7 +319,7 @@
 
 
                         <ul class="list list_2">
-                            <li><a href="#">Subtotal <span style="color:#f15e2c">@ViewBag.TT.ToString("C0", new CultureInfo("vi-VN"))</span></a></li>
+                            <li><a href="#">Tổng tiền sản phẩm <span style="color:#f15e2c">@ViewBag.TT.ToString("C0", new CultureInfo("vi-VN"))</span></a></li>
                             @if (ViewBag.Value != null)
                             {
                                 <li>
@@ -383,6 +387,7 @@
                                 </li>
 
                             }
+                          
                         </ul>
 
 
