--- a/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -412,7 +412,7 @@
 
                                 </ul>
                             </li>
-                            <li class="menu-item active ">
+                        @*     <li class="menu-item active ">
                                 <a href="javascript:void(0);" class="menu-link menu-toggle">
                                     <i class="menu-icon tf-icons mdi mdi-account"></i>
                                     <div data-i18n="Dashboards">Quản lý khác khàng </div>
@@ -437,7 +437,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </li>
+                            </li> *@
                         }
                      
                     </ul>
