--- a/APPVIEW/Views/QLBills/BanHangOff.cshtml
+++ b/APPVIEW/Views/QLBills/BanHangOff.cshtml
@@ -30,42 +30,26 @@
         font-weight: bold; /* Chữ đậm */
     }
 
-    .button-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 15px;
+    .btn {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 16px;
+        text-align: center;
+        text-decoration: none;
+        outline: none;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: background-color 0.3s;
     }
 
     .btn-primary {
-        background-color: #007bff;
+        background-color: #3498db;
         color: #fff;
-        border: 1px solid #007bff;
-        border-radius: 5px;
-        padding: 10px 20px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
+        border: 1px solid #3498db;
     }
 
         .btn-primary:hover {
-            background-color: #0056b3;
-            border-color: #0056b3;
-        }
-
-    .btn-secondary {
-        background-color: #28a745;
-        color: #fff;
-        border: 1px solid #28a745;
-        border-radius: 5px;
-        padding: 10px 20px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-        margin-left: 20px;
-    }
-
-        .btn-secondary:hover {
-            background-color: #218838;
-            border-color: #218838;
+            background-color: #2980b9;
         }
 
     .card-header {
@@ -167,8 +151,8 @@
                                         </div>
                                         <div class="card-body">
 
-                                            <p style="text-align:left;display: inline-block;width: 700px">
-                                                Sản phẩm : @item.Name
+                                            <p style="text-align:left;display: inline-block;width: 700px;font-size:13px">
+                                                @item.Name
                                             </p>
                                             @foreach (var size in ViewBag.size)
                                             {
