--- a/APPVIEW/Views/Home/ThongTinNotLogin.cshtml
+++ b/APPVIEW/Views/Home/ThongTinNotLogin.cshtml
@@ -56,7 +56,7 @@
 
 
 
-@if (tb != null ||  bill.Count()>0)
+@if (tb != null ||  tb!="")
 {
     <h3 style="text-align:center">Đơn hàng của bạn </h3>
     @foreach (var itembill in bill)
