--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -315,7 +315,7 @@
 
 
                         <ul class="list list_2">
-                            <li><a href="#">Subtotal <span style="color:#f15e2c">@ViewBag.TT.ToString("C0", new CultureInfo("vi-VN"))</span></a></li>
+                            <li><a href="#">Tổng tiền sản phẩm <span style="color:#f15e2c">@ViewBag.TT.ToString("C0", new CultureInfo("vi-VN"))</span></a></li>
                             @if (ViewBag.Value != null)
                             {
                                 <li>
@@ -383,6 +383,7 @@
                                 </li>
 
                             }
+                          
                         </ul>
 
 
