--- a/APPVIEW/Views/QLBills/ShowBill.cshtml
+++ b/APPVIEW/Views/QLBills/ShowBill.cshtml
@@ -156,7 +156,7 @@
                     else
                     {
                         <tr>
-                            <td colspan="12" class="text-center">No Data.</td>
+                            <td colspan="12" class="text-center">Không có dữ liệu.</td>
                         </tr>
                     }
                 </tbody>
