--- a/APPVIEW/Views/QLBills/ShowBillDaNhan.cshtml
+++ b/APPVIEW/Views/QLBills/ShowBillDaNhan.cshtml
@@ -130,7 +130,7 @@
                                         </button>
                                         <div class="dropdown-menu dropdown-menu-end m-0">
                                             <a href=" @Url.Action("nhanhang", new { id = itembill.id })" class="dropdown-item ">
-                                                <i class="mdi mdi-truck me-2"></i>
+                                                <i class="mdi mdi-check-circle"></i>
                                                 <span>Thành công</span>
                                             </a>
                                             <a href="@Url.Action("Chitiet", new { id = itembill.id })" class="dropdown-item">
