--- a/APPVIEW/Views/Bill/GetList.cshtml
+++ b/APPVIEW/Views/Bill/GetList.cshtml
@@ -83,7 +83,9 @@
                             
                             Trạng thái
                         </th>
-                        <th></th>
+                        <th>
+                            Hành động
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -189,8 +191,14 @@
                                     <td>Chờ Hủy</td>
                                 }
 
-
+                                <td>
+                                    <a aria-label="Delete Invoice" href=" @Url.Action("Chitiet","QLBills", new { id = itembill.id })" class="dropdown-item ">
+                                        <i class="mdi mdi-eye-outline me-2"></i>
+                                       
+                                    </a>
+                                </td>
                             </tr>
+                          
                         }
                     }
                     else
